--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "sheetjs": "^2.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
